<resources>
    <string name="app_name">budkitapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title1">Pelajari Budayamu</string>
    <string name="title2">Fakta Menarik Tentang Tempat di Indonesia</string>
    <string name="title3">Ketahui Lebih Banyak Tentang Indonesia</string>
    <string name="description1"> Pelajari budayamu dengan melihat aplikasi budayakita. jangan biarkan orang di luar sana tahu lebih banyak dari Anda.</string>
    <string name="description2">Anda bisa mendapatkan pengetahuan tentang tempat yang menarik di Indonesia yang belum Anda ketahui</string>
    <string name="description3">Anda akan dapat membuka pengetahuan Anda secara lebih luas tentang kewarganegaraan Anda di Indonesia.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">masuk atau daftar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Maaf, email mu salah</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Harus diisi</string>
    <string name="permission_rationale">"Izin kontak diperlukan untuk memberikan penyelesaian email."</string>
    <string name="title_activity_register">Masuk</string>
    <string name="title_activity_main_home">MainHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="dcf">
        SEMARANG (Asatu.id) – Dieng Culture Festival (DCF) 2019 yang diselenggarakan oleh Komunitas Dieng Pandawa, akan berlangsung mulai Jumat sampai Minggu (3-5/8). Dieng Pandawa adalah sebuah kelompok sadar wisata (Pokdarwis) di Desa Dieng Kulon, Kecamatan Batur, Banjarnegara.
Kepala Bidang Pemasaran Dinas Pemuda Olahraga dan Pariwisata (Disporapar) Jawa Tengah, Ida Bagus Ketut Alamsyah, menyatakan, sejumlah agenda sudah disiapkan untuk digelar pada DCF yang tahun ini memasuki penyelenggaraan ke sembilan.
Agenda itu dimulai pada Jumat (3/8), yaitu Aksi Dieng Bersih, Festival Caping dan Bunga, Pameran Produk UKM dan Kuliner, Festival Jazz Atas Awan, dan Festival Kembang Api.
Kemudian pada Sabtu (4/8), Gubernur Jawa Tengah Ganjar Pranowo akan membuka acara yang diawali dengan Festival Tumpeng, Kirab Budaya, Sendra Tari Rambut Gembel, Senandung Negeri Atas Awan, serta Festival Lampion.
Dan pada hari terakhir, Minggu (5/8), akan diadakan Jamasan Rambut Gembel dan Prosesi Ruwatan Cukur Rambut Gembel. Diperkirakan, puncak kunjungan wisatawan akan memenuhi prosesi tersebut.
“Magnet wisatawan akan mencapai puncaknya pada prosesi ruwatan cukur gembel yang diawali dengan jamasan,” terang Alamsyah.
Puncak prosesi tersebut akan diselenggarakan di Kompleks Candi Arjuna. Sedangkan seluruh kegiatan akan melibatkan masyarakat Dieng di kawasan Kabupaten Banjarnegara, Wonosobo, dan Batang.
Untuk para wisatawan yang akan menyaksikan pergelaran DCF dengan memesan tiket online, Alamsyah mewanti-wanti agar berhati-hati dengan promo abal-abal yang biasanya memanfaatkan event ini.
Pasalnya, sejumlah wisatawan dari Jakarta sempat tertipu dengan biro wisata abal-abal yang turut menjual event DCF 9 ini.
“Lebih baik langsung menghubungi panitia melalui website resmi di www.diengpandawa.com atau www.dieng.id,” tegasnya.

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
