<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Agreement">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16pt"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="Disclaimer : " />
        <TextView
            android:id="@+id/isiDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description1" />
        <TextView
            android:id="@+id/isiDisclaimer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description2" />
        <TextView
            android:id="@+id/isiDisclaimer3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description3" />
        <TextView
            android:id="@+id/isiDisclaimer4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description1" />
        <TextView
            android:id="@+id/isiDisclaimer5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description1" />
        <TextView
            android:id="@+id/isiDisclaimer6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="10pt"
            android:text="@string/description1" />
        <Button
            android:id="@+id/setuju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20dp"
            android:background="#0080FF"
            android:textColor="#ffffff"
            android:text="Saya Setuju"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>




</ScrollView>
